--- a/public/index.html
+++ b/public/index.html
@@ -1,31 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+   <!-- Global site tag (gtag.js) - Google Analytics -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-57194412-2"></script>
+   <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Jonas Deprund</title>
-  </head>
+     gtag('config', 'UA-57194412-2');
+   </script>
+
+   <meta charset="utf-8" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+   <!-- Primary Meta Tags -->
+   <title>Jonas Deprund - Interactive designer</title>
+   <meta name="title" content="Jonas Deprund - Interactive designer" />
+   <meta
+     name="description"
+     content="I am a interactive designer based in Paris. I craft websites and identities."
+   />
+
+   <!-- Open Graph / Facebook -->
+   <meta property="og:type" content="website" />
+   <meta property="og:url" content="https://metatags.io/" />
+   <meta property="og:title" content="Jonas Deprund - Interactive designer" />
+   <meta
+     property="og:description"
+     content="I am a interactive designer based in Paris. I craft websites and identities."
+   />
+   <meta property="og:image" content="images/meta/meta.png" />
+
+   <!-- Twitter -->
+   <meta property="twitter:card" content="summary_large_image" />
+   <meta property="twitter:url" content="https://metatags.io/" />
+   <meta
+     property="twitter:title"
+     content="Jonas Deprund - Interactive designer"
+   />
+   <meta
+     property="twitter:description"
+     content="I am a interactive designer based in Paris. I craft websites and identities."
+   />
+   <meta property="twitter:image" content="images/meta/meta.png" />
+
+   <link
+     rel="apple-touch-icon"
+     sizes="180x180"
+     href="images/favicon/apple-touch-icon.png"
+   />
+   <link
+     rel="icon"
+     type="image/png"
+     sizes="32x32"
+     href="images/favicon/favicon-32x32.png"
+   />
+   <link
+     rel="icon"
+     type="image/png"
+     sizes="16x16"
+     href="images/favicon/favicon-16x16.png"
+   />
+   <link rel="manifest" href="images/favicon/site.webmanifest" />
+
+   <link rel="stylesheet" type="text/css" href="css/main.css" />
+ </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
