--- a/public/index.html
+++ b/public/index.html
@@ -44,26 +44,8 @@
    />
    <meta property="twitter:image" content="images/meta/meta.png" />
 
-   <link
-     rel="apple-touch-icon"
-     sizes="180x180"
-     href="images/favicon/apple-touch-icon.png"
-   />
-   <link
-     rel="icon"
-     type="image/png"
-     sizes="32x32"
-     href="images/favicon/favicon-32x32.png"
-   />
-   <link
-     rel="icon"
-     type="image/png"
-     sizes="16x16"
-     href="images/favicon/favicon-16x16.png"
-   />
-   <link rel="manifest" href="images/favicon/site.webmanifest" />
-
-   <link rel="stylesheet" type="text/css" href="css/main.css" />
+   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
  </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
