--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,9 @@
 
    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+
+    <!-- Script -->
+   
  </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -60,5 +63,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
 </html>
